# diagram_mcp

./: LICENSE  README.md  diagram-mcp.py  main.py  pyproject.toml
.github/workflows/: codeql.yml
src/diagrams_mcp/: code_generator.py  diagram_generator.py  pattern_analyze.py  pattern_architect.py  pattern_cate.py  pattern_engine.py  server.py  service_finder.py
